--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,13 +41,9 @@
         {% include social-buttons.html %}
 
         <ul class="footer-links">
-          <li><a href="{{ page.base_url }}2.3.2/">Bootstrap 2.3.2 docs</a></li>
-          <li class="muted">&middot;</li>
-          <li><a href="{{ site.blog }}">Blog</a></li>
-          <li class="muted">&middot;</li>
-          <li><a href="{{ site.repo }}/issues?state=open">Issues</a></li>
-          <li class="muted">&middot;</li>
-          <li><a href="{{ site.repo }}/releases">Releases</a></li>
+          <li><a class="" href="{{ site.github }}" target="_blank">GitHub Profile</a></li>
+          <li><a class="" href="{{ site.linkedin }}" target="_blank">Linkedin</a></li>
+          <li><a class="" href="mailto:{{ site.email }}">Email</a></li>
         </ul>
       </div>
     </footer>
