update default template

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
   {% if page.title == "Bootstrap" %}
     {{ page.title }}
   {% else if %}
-    {{ page.title }} &middot; Bootstrap
+    {{ page.title }} Nathan Jessen Portfolio hosted on GitHub
   {% endif %}
 </title>
 
