--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,10 @@
 <meta name="author" content="">
 
 <title>
-  {% if page.title == "Bootstrap" %}
-    {{ page.title }}
+  {% if page.title == "Semanticss" %}
+    {{ page.title }} | Portfolio of Nathan Jessen
   {% else if %}
-    {{ page.title }} Nathan Jessen Portfolio hosted on GitHub
+    {{ page.title }} | Semanticss
   {% endif %}
 </title>
 
