--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -11,20 +11,8 @@
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <li{% if page.slug == "getting-started" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}getting-started">Getting started</a>
-        </li>
-        <li{% if page.slug == "css" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}css">CSS</a>
-        </li>
-        <li{% if page.slug == "components" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}components">Components</a>
-        </li>
-        <li{% if page.slug == "js" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}javascript">JavaScript</a>
-        </li>
-        <li{% if page.slug == "customize" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}customize">Customize</a>
+        <li{% if page.slug == "home" %} class="active"{% endif %}>
+          <a href="{{ page.base_url }}">Semanticss</a>
         </li>
       </ul>
     </nav>
