--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
     <!-- Place anything custom after this. -->
   </head>
   <body>
+    {% include nav-main.html %}
     <a class="sr-only" href="#content">Skip navigation</a>
 
-    <!-- Docs page layout -->
     <div class="bs-header" id="content">
       <div class="container">
         <h1>{{ page.title }}</h1>
