--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -7,13 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="{{ page.base_url }}" class="navbar-brand">Bootstrap</a>
+      <a href="{{ page.base_url }}" class="navbar-brand">Semanticss</a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <li{% if page.slug == "home" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}">Semanticss</a>
-        </li>
+        <!-- <li{% if page.slug == "home" %} class="active"{% endif %}>
+          <a href="{{ page.base_url }}"></a>
+        </li> -->
       </ul>
     </nav>
   </div>
