--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
 
 <!-- Bootstrap core CSS -->
 <link href="{{ page.base_url }}dist/css/bootstrap.css" rel="stylesheet">
+<link href="{{ page.base_url }}assets/css/docs.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
