--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,6 @@
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	ga('create', 'UA-42437510-1', 'nathanjessen.github.io');
+	ga('create', 'UA-42437510-1', 'semanticss.com');
 	ga('send', 'pageview');
 </script>
