--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 </title>
 
 <!-- Bootstrap core CSS -->
-<link href="{{ page.base_url }}dist/css/bootstrap.css" rel="stylesheet">
+<link href="{{ page.base_url }}css/bootstrap.css" rel="stylesheet">
 <link href="{{ page.base_url }}assets/css/custom.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
