--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="container bs-docs-container">
+    <div class="container">
       <div class="row">
         <div class="col-md-3">
           <div class="bs-sidebar hidden-print" role="complementary">
