--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,8 @@
 </title>
 
 <!-- Bootstrap core CSS -->
-<link href="{{ page.base_url }}assets/css/bootstrap.css" rel="stylesheet">
-<link href="{{ page.base_url }}assets/css/custom.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/css/bootstrap.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/css/custom.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
