--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <a class="sr-only" href="#content">Skip navigation</a>
-    {% include nav-main.html %}
+    {% include nav/nav-main.html %}
 
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <div class="bs-sidebar hidden-print" role="complementary">
             <ul class="nav bs-sidenav">
-                {% include nav-social.html %}
+                {% include nav/nav-social.html %}
             </ul>
           </div>
         </div>
