CSS for font-family of my name
Add Raleway Dots style

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,3 +14,4 @@ body {
   padding-top: 70px; /* Account for fixed navbar */
 }
 
+.name { font-family: 'Raleway Dots', cursive; font-weight: 400; }
