--- a/_includes/nav/nav-main.html
+++ b/_includes/nav/nav-main.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="{{ site.base_url }}" class="navbar-brand">Semanticss</a>
+      <a href="{{ site.base_url }}" class="navbar-brand name">Semanticss</a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
