--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
 <html lang="en">
+<!--<![endif]-->
   <head>
     <!-- Meta, title, CSS, favicons, etc. -->
     {% include header.html %}
