--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,18 +19,18 @@
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
-  <script src="{{ page.base_url }}assets/js/html5shiv.js"></script>
-  <script src="{{ page.base_url }}assets/js/respond.min.js"></script>
+  <script src="{{ site.base_url }}assets/js/html5shiv.js"></script>
+  <script src="{{ site.base_url }}assets/js/respond.min.js"></script>
 <![endif]-->
 
 <link href="http://feeds.feedburner.com/semanticss" rel="alternate" title="Semanticss - Nathan Jessen" type="application/atom+xml" />
 
 <!-- Favicons -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ page.base_url }}assets/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ page.base_url }}assets/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ page.base_url }}assets/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="{{ page.base_url }}assets/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="{{ page.base_url }}assets/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.base_url }}assets/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.base_url }}assets/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.base_url }}assets/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="{{ site.base_url }}assets/ico/apple-touch-icon-57-precomposed.png">
+<link rel="shortcut icon" href="{{ site.base_url }}assets/ico/favicon.png">
 
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
