--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
     <!-- Place anything custom after this. -->
   </head>
   <body>
+    <!--[if lt IE 10]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/?locale=en/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
     <a class="sr-only" href="#content">Skip navigation</a>
     {% include nav/nav-main.html %}
 
