--- a/_includes/nav/nav-main.html
+++ b/_includes/nav/nav-main.html
@@ -11,12 +11,24 @@
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <li{% if page.slug == "blog" %} class="active"{% endif %}>
+        <li{% if page.slug == "work" %} class="active"{% endif %}>
+          <a href="{{ site.base_url }}work/">Work</a>
+        </li>
+        <!-- <li{% if page.slug == "blog" %} class="active"{% endif %}>
           <a href="{{ site.base_url }}blog/">Blog</a>
         </li>
-        <li{% if page.slug == "projects" %} class="active"{% endif %}>
-          <a href="{{ site.base_url }}projects/">Projects</a>
+        <li{% if page.slug == "about" %} class="active"{% endif %}>
+          <a href="{{ site.base_url }}about/">About</a>
         </li>
+        <li{% if page.slug == "pens" %} class="active"{% endif %}>
+          <a href="{{ site.base_url }}pens/">Pens</a>
+        </li>
+        <li{% if page.slug == "talks" %} class="active"{% endif %}>
+          <a href="{{ site.base_url }}talks/">Talks</a>
+        </li>
+        <li{% if page.slug == "contact" %} class="active"{% endif %}>
+          <a href="{{ site.base_url }}contact/">Contact</a>
+        </li> -->
       </ul>
     </nav>
   </div>
