--- a/_includes/nav/nav-social.html
+++ b/_includes/nav/nav-social.html
@@ -1,3 +1,4 @@
-<li><a class="" href="{{ site.github }}" target="_blank">GitHub Profile</a></li>
+<li><a class="" href="{{ site.github }}" target="_blank">GitHub</a></li>
 <li><a class="" href="{{ site.linkedin }}" target="_blank">Linkedin</a></li>
+<li><a class="" href="{{ site.googleplus }}" target="_blank">Google Plus</a></li>
 <li><a class="" href="mailto:{{ site.email }}">Email</a></li>
