--- a/_includes/recent-blog-posts.html
+++ b/_includes/recent-blog-posts.html
@@ -1,5 +1,5 @@
 <section>
-	<h3>Recent Blog Posts</h3>
+	<h3>Recent Posts</h3>
 	<ul>
 		{% assign blog_categories = site.categories['blog'] %}
 		{% for category in blog_categories limit: 20 %}
