--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,7 @@
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><!-- Force Latest IE rendering engine -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="Personal page for Nathan Jessen">
+<meta name="author" content="Nathan Jessen">
 
 <title>
   {% if page.title == "Semanticss" %}
@@ -12,25 +11,23 @@
   {% endif %}
 </title>
 
-<!-- Bootstrap core CSS -->
-<link href="{{ site.base_url }}assets/css/bootstrap.css" rel="stylesheet">
+<!-- Core CSS -->
+<link href="{{ site.base_url }}assets/css/normalize.css" rel="stylesheet">
 <link href="{{ site.base_url }}assets/css/custom.css" rel="stylesheet">
-<!-- <link href='http://fonts.googleapis.com/css?family=Raleway+Dots' rel='stylesheet' type='text/css'> -->
+<link href='http://fonts.googleapis.com/css?family=Dosis:400,500,600,700' rel='stylesheet' type='text/css'>
 
-<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="{{ site.base_url }}assets/js/html5shiv.js"></script>
-  <script src="{{ site.base_url }}assets/js/respond.min.js"></script>
 <![endif]-->
 
 <link href="http://feeds.feedburner.com/semanticss" rel="alternate" title="Semanticss - Nathan Jessen" type="application/atom+xml" />
 
 <!-- Favicons -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.base_url }}assets/ico/apple-touch-icon-144-precomposed.png">
+<!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.base_url }}assets/ico/apple-touch-icon-144-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.base_url }}assets/ico/apple-touch-icon-114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.base_url }}assets/ico/apple-touch-icon-72-precomposed.png">
 <link rel="apple-touch-icon-precomposed" href="{{ site.base_url }}assets/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="{{ site.base_url }}assets/ico/favicon.png">
+<link rel="shortcut icon" href="{{ site.base_url }}assets/ico/favicon.png"> -->
 
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
