--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,2 @@
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="{{ site.base_url }}assets/js/jquery.js"></script>
-<script src="{{ site.base_url }}assets/js/bootstrap.min.js"></script>
+<script src="{{ site.base_url }}assets/js/zepto.min.js"></script>
+<script src="{{ site.base_url }}assets/js/main.js"></script>
