Remove brand logo from navigation

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,6 +1,6 @@
 <nav class="wrap" role="navigation">
-  <div class="brand-logo">Semanticss</div>
   <ul class="nav no-disc inline-list block-links">
+    <!-- <div class="brand-logo"></div> -->
     <li{% if page.slug == "articles" %} class="active"{% endif %}>
       <a href="{{ site.base_url }}">Articles</a>
     </li>
