--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,6 +10,7 @@
  */
 
 body {
+	background: #f2f2f2;
 	font-size: 20px;
 	line-height: 1.5;
 }
@@ -24,8 +25,13 @@ h1, h2, h3, h4 {
 }
 
 a, a:focus, a:visited {
-	/*color: #34495e;*/
+	background: transparent;
+	color: #2980b9;
 	text-decoration: none;
+}
+a:hover {
+	color: #3498db;
+	text-decoration: underline;
 }
 
 .wrap {
@@ -44,7 +50,8 @@ a, a:focus, a:visited {
 }
 
 #top {
-	background: #111;
+	background: #292929;
+	border-bottom: 6px solid #3498db;
 	height: 70px;
 }
 
