--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
 
 <!-- Core CSS -->
 <link href="{{ site.base_url }}assets/css/normalize.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/css/typeplate.css" rel="stylesheet">
 <link href="{{ site.base_url }}assets/css/custom.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Dosis:400,500,600,700' rel='stylesheet' type='text/css'>
 
