Restructuring of entire site
Restructure to be cleaner and more robust.
Remove work posts
Add tags and category pages
Adjust permalink structure and add pagination
Move pages into a subfolder
Goal will be to convert site into a theme

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -13,15 +13,16 @@
     </header>
 
     <div class="wrap">
+      <h3>{{ page.title }}</h3>
       {{ content }}
     </div>
 
-    <footer>
-      <p>Hosted on <a href="https://pages.github.com">GitHub Pages</a></p>
+    <footer class="wrap">
+      <p>&copy; {{ site.time | date: '%Y' }} {{ site.author }} with Jekyll.</p>
     </footer>
 
     <!-- JS and analytics only. -->
-    {% include footer.html %}
+    {% include scripts.html %}
 
   </body>
 </html>
