--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,27 +1,27 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Personal page for Nathan Jessen">
-<meta name="author" content="Nathan Jessen">
+<meta name="description" content="{{ page.description }}">
+<meta name="author" content="{{ site.author }}">
 
 <title>
   {% if page.title == "Semanticss" %}
-    {{ page.title }} | Portfolio of Nathan Jessen
+    {{ page.title }} | {{ site.description }}
   {% else if %}
-    {{ page.title }} | Semanticss
+    {{ page.title }} | {{ site.title }}
   {% endif %}
 </title>
 
 <!-- Core CSS -->
-<link href="{{ site.base_url }}assets/css/normalize.css" rel="stylesheet">
-<link href="{{ site.base_url }}assets/css/typeplate.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/resources/normalize/normalize.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/resources/typeplate/typeplate.css" rel="stylesheet">
 <link href="{{ site.base_url }}assets/css/custom.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Dosis:400,500,600,700' rel='stylesheet' type='text/css'>
 
 <!--[if lt IE 9]>
-  <script src="{{ site.base_url }}assets/js/html5shiv.js"></script>
+  <script src="/assets/js/html5shiv.js"></script>
 <![endif]-->
 
-<link href="http://feeds.feedburner.com/semanticss" rel="alternate" title="Semanticss - Nathan Jessen" type="application/atom+xml" />
+<link href="{{ site.BASE_PATH }}/{{ site.rss_path }}" rel="alternate" title="{{ site.title }} - {{ site.author }}" type="application/atom+xml" />
 
 <!-- Favicons -->
 <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.base_url }}assets/ico/apple-touch-icon-144-precomposed.png">
