--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,8 +1,11 @@
 <nav class="wrap" role="navigation">
   <ul class="nav no-disc inline-list block-links">
     <!-- <div class="brand-logo"></div> -->
-    <li{% if page.slug == "articles" %} class="active"{% endif %}>
-      <a href="{{ site.base_url }}">Articles</a>
+    <li{% if page.slug == "home" %} class="active"{% endif %}>
+      <a href="{{ site.base_url }}">Home</a>
+    </li>
+    <li{% if page.slug == "blog" %} class="active"{% endif %}>
+      <a href="{{ site.base_url }}blog/">Blog</a>
     </li>
     <li{% if page.slug == "work" %} class="active"{% endif %}>
       <a href="{{ site.base_url }}work/">Work</a>
