--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,12 @@
       {{ content }}
     </div>
 
+    <footer class="wrap">
+      <p>&copy; {{ site.time | date: '%Y' }} {{ site.author }} with Jekyll.</p>
+    </footer>
+
     <!-- JS and analytics only. -->
-    {% include footer.html %}
+    {% include scripts.html %}
 
   </body>
 </html>
