--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,14 +11,56 @@
  * Base
  */
 
+*, *:before, *:after {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+html {
+	font: 112%/1.5 "Open Sans", sans-serif;
+	font-weight: 400;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+}
+
 body {
 	background: #f2f2f2;
+	color: #555;
 	font-size: 20px;
+	margin: 0;
 }
 
 h1, h2, h3, h4 {
 	font-family: 'Dosis', sans-serif;
 	font-weight: 600;
+}
+
+header {
+	overflow: hidden;
+	text-align: center;
+}
+
+.home header {
+	background: transparent url('/assets/media/sublime.png') no-repeat 0 -50%;
+	background-size: cover;
+	height: 600px;
+	margin-bottom: 30px;
+}
+
+.home .banner {
+	height: 600px;
+	background-color: rgba(61, 66, 96, 0.4);
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(61, 66, 96, 0.4)), color-stop(100%, rgba(21, 23, 34, 0.8)));
+	background-image: -webkit-linear-gradient(-410deg, rgba(61, 66, 96, 0.4) 20%, rgba(21, 23, 34, 0.8));
+	background-image: linear-gradient(140deg,rgba(61, 66, 96, 0.4) 20%, rgba(21, 23, 34, 0.8));
+}
+
+.banner {
+	background-color: rgba(61, 66, 96, 0.8);
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(61, 66, 96, 0.8)), color-stop(100%, rgba(21, 23, 34, 0.8)));
+	background-image: -webkit-linear-gradient(-410deg, rgba(61, 66, 96, 0.8) 20%, rgba(21, 23, 34, 0.8));
+	background-image: linear-gradient(140deg,rgba(61, 66, 96, 0.8) 20%, rgba(21, 23, 34, 0.8));
 }
 
 a, a:focus, a:visited {
@@ -64,12 +106,12 @@ footer.wrap {
 	float: left;
 }
 
-#top {
+/*#top {
 	background: #292929;
 	border-bottom: 6px solid #3498db;
 	height: 70px;
 	margin-bottom: 36px;
-}
+}*/
 
 #top li {
 	margin-left: 50px;
@@ -82,3 +124,137 @@ footer.wrap {
 	line-height: 70px;
 	text-transform: uppercase;
 }
+
+/* Grid
+-------------------------------------------------------------- */
+.column {
+	float: left;
+	margin-left: 5%;
+}
+
+.column:first-child {
+	margin-left: 0;
+}
+
+.column.full {
+	width: 100%;
+}
+
+.column.two-thirds {
+	width: 65%;
+}
+
+.column.half {
+	width: 47.5%;
+}
+
+.column.one-third {
+	width: 30%;
+}
+
+.column.one-fourth {
+	width: 21.25%;
+}
+
+/* #Clearfix
+-------------------------------------------------------------- */
+.container:before,
+.container:after,
+.row:before,
+.row:after,
+.cf:before,
+.cf:after {
+  content: " ";
+  display: table;
+}
+
+.container:after,
+.row-example:after,
+.cf:after {
+  clear: both;
+}
+
+.container,
+.row-example,
+.cf {
+  *zoom: 1;
+}
+
+/* animate.css by Daniel Eden
+-------------------------------------------------------------- */
+.animated{-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-ms-animation-fill-mode:both;-o-animation-fill-mode:both;animation-fill-mode:both;-webkit-animation-duration:2s;-moz-animation-duration:2s;-ms-animation-duration:2s;-o-animation-duration:2s;animation-duration:2s;}.animated.hinge{-webkit-animation-duration:2s;-moz-animation-duration:2s;-ms-animation-duration:2s;-o-animation-duration:2s;animation-duration:2s;}@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+  } 100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@-moz-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    -moz-transform: translateY(0);
+  }
+}
+
+@-o-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -o-transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    -o-transform: translateY(0);
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  -moz-animation-name: fadeInUp;
+  -o-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+
+.cover-green {
+  background-color: rgba(21, 111, 120, 0.6);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(21, 111, 120, 0.6)), color-stop(100%, rgba(6, 31, 33, 0.8)));
+  background-image: -webkit-linear-gradient(-410deg, rgba(21, 111, 120, 0.6) 20%, rgba(6, 31, 33, 0.8));
+  background-image: linear-gradient(140deg,rgba(21, 111, 120, 0.6) 20%, rgba(6, 31, 33, 0.8)); }
+
+.cover-purple {
+  background-color: rgba(73, 50, 82, 0.6);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(73, 50, 82, 0.6)), color-stop(100%, rgba(17, 11, 19, 0.8)));
+  background-image: -webkit-linear-gradient(-410deg, rgba(73, 50, 82, 0.6) 20%, rgba(17, 11, 19, 0.8));
+  background-image: linear-gradient(140deg,rgba(73, 50, 82, 0.6) 20%, rgba(17, 11, 19, 0.8)); }
+
+.cover-red {
+  background-color: rgba(119, 31, 18, 0.6);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(119, 31, 18, 0.6)), color-stop(100%, rgba(30, 8, 5, 0.8)));
+  background-image: -webkit-linear-gradient(-410deg, rgba(119, 31, 18, 0.6) 20%, rgba(30, 8, 5, 0.8));
+  background-image: linear-gradient(140deg,rgba(119, 31, 18, 0.6) 20%, rgba(30, 8, 5, 0.8)); }
+
+.cover-slate {
+  background-color: rgba(61, 66, 96, 0.6);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgba(61, 66, 96, 0.6)), color-stop(100%, rgba(21, 23, 34, 0.8)));
+  background-image: -webkit-linear-gradient(-410deg, rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8));
+  background-image: linear-gradient(140deg,rgba(61, 66, 96, 0.6) 20%, rgba(21, 23, 34, 0.8)); }
