--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 <meta name="author" content="{{ site.author }}">
 
 <title>
-  {% if page.title == "Semanticss" %}
+  {% if page.title == "Nathan Jessen" %}
     {{ page.title }} | {{ site.description }}
   {% else if %}
     {{ page.title }} | {{ site.title }}
@@ -12,8 +12,7 @@
 </title>
 
 <!-- Core CSS -->
-<link href="{{ site.base_url }}assets/resources/normalize/normalize.css" rel="stylesheet">
-<link href="{{ site.base_url }}assets/css/custom.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/css/main.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Dosis:400,500,600,700' rel='stylesheet' type='text/css'>
 
 <!--[if lt IE 9]>
