--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,6 @@
 <script src="{{ site.base_url }}assets/resources/zepto/zepto.min.js"></script>
 <script src="{{ site.base_url }}assets/js/main.js"></script>
+
+<script>
+	document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>');
+</script>
