--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,12 +29,11 @@
 <link rel="shortcut icon" href="{{ site.base_url }}assets/ico/favicon.png"> -->
 
 <script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	ga('create', 'UA-42437510-1', 'semanticss.com');
-	ga('send', 'pageview');
+  ga('create', 'UA-42437510-1', 'nathanjessen.github.io');
+  ga('send', 'pageview');
 </script>
-
