Don't loop to 1st slide at end

--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -21,7 +21,7 @@
 				touch: true,
 				overview:true,
 				center:true,
-				loop:true,
+				loop:false,
 				rtl:false,
 				autoSlide:0,
 				mouseWheel:true,
