--- a/_includes/head-slides.html
+++ b/_includes/head-slides.html
@@ -8,16 +8,16 @@
 </title>
 
 <!-- Core CSS -->
-<link href="{{ site.base_url }}assets/vendor/reveal/css/reveal.min.css" rel="stylesheet">
-<link href="{{ site.base_url }}assets/vendor/reveal/css/theme/default.css" rel="stylesheet">
-<script src="{{ site.base_url }}assets/vendor/reveal/js/reveal.min.js"></script>
+<link href="{{ site.base_url }}assets/vendors/reveal/css/reveal.min.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/vendors/reveal/css/theme/default.css" rel="stylesheet">
+<script src="{{ site.base_url }}assets/vendors/reveal/js/reveal.min.js"></script>
 
 <script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	ga('create', 'UA-42437510-1', 'semanticss.com');
-	ga('send', 'pageview');
+  ga('create', 'UA-42437510-1', 'nathanjessen.github.io');
+  ga('send', 'pageview');
 </script>
