Link to minified js file but comment out until needed

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,1 +1,1 @@
-<script src="{{ site.base_url }}assets/js/main.js"></script>
+<!-- <script src="{{ site.base_url }}assets/js/main.min.js"></script> -->
