Update layout and theme
Add sticky footer, minify css, turn off most inuit objects, remove some
unused code

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -20,7 +20,7 @@
     </main>
 
     <footer class="wrap" role="contentinfo">
-      <p>&copy; {{ site.time | date: '%Y' }} {{ site.author }} with Jekyll.</p>
+      <p>&copy; {{ site.time | date: '%Y' }} {{ site.author }}</p>
     </footer>
 
     <!-- JS and analytics only. -->
