--- a/assets/scss/theme/_base.scss
+++ b/assets/scss/theme/_base.scss
@@ -2,13 +2,12 @@
  * Base
  */
 
+
 html {
-	// font:#{($base-font-size/16px)*1em}/#{$line-height-ratio} $base-font-family;
 	font: 112%/1.5 "Open Sans", sans-serif;
 }
 
 body {
-	background: $white-off;
 	color: $gray;
 	font-size: 20px;
 }
@@ -24,6 +23,13 @@ header {
 	padding: 0 5%;
 }
 
+@include sticky-footer($footer-height, '.page-wrap', '.site-footer');
+
+.site-footer {
+	background: $white-off;
+	line-height: $footer-height;
+}
+
 /**
  * Headings
  */
@@ -31,13 +37,6 @@ header {
 h1, h2, h3, h4 {
 	font-family: 'Dosis', sans-serif;
 	font-weight: 600;
-}
-
-footer.wrap {
-	margin-top: 50px;
-}
-
-.img--round {
 }
 
 .headshot {
