Add fontello for icons

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,6 +20,7 @@
 /////////////////////////////
 // Theme
 /////////////////////////////
+@import "theme/fontello";
 @import "theme/base";
 @import "theme/buttons";
 @import "theme/slabs";
