--- a/assets/scss/helpers/_vars.scss
+++ b/assets/scss/helpers/_vars.scss
@@ -26,7 +26,7 @@
 $use-grids:         true;
 $use-flexbox:       false;
 $use-columns:       false;
-$use-nav:           false;
+$use-nav:           true;
 $use-options:       false;
 $use-pagination:    false;
 $use-breadcrumb:    false;
@@ -73,11 +73,12 @@ $white: #fff;
 $white-off: #eee;
 $gray-light: #ccc;
 $gray: #555;
+$gray-dark: #333;
 
 $green: #063;
 $green-dark: #418636;
 
-$alternate: #313E42;
+$teal-dark: #313E42;
 $footer-height: 50px;
 
 // Buttons
