--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
 <title>
   {% if page.title == "Nathan Jessen" %}
-    {{ page.title }} | {{ site.description }}
+    {{ site.description }}
   {% else if %}
     {{ page.title }} | {{ site.title }}
   {% endif %}
