--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,21 +8,28 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/?locale=en/">upgrade your browser</a>. Your experience won't be effected on this site but upgrading your browser is always a great idea!</p>
     <![endif]-->
 
-    <div class="page-wrap">
-      <div class="container">
-        <header id="top" class="container slab--cover" role="banner">
-          <div class="wrap">
-            <img class="img--round headshot" src="assets/img/nathan-jessen-thumb.jpg" alt="Headshot of Nathan Jessen" width="150" height="150">
-            <h1>Nathan Jessen</h1>
-            <p>Interactive Web Developer<br>CSS/Sass and HTML5 enthusiast<br>Open source advocate</p>
-          </div>
-        </header>
-        {{ content }}
+    <header id="top" class="container slab" role="banner">
+      <div class="wrap">
+        <a href="{{ site.BASE_PATH }}"><img class="img--round headshot" src="{{ site.base_url }}assets/img/nathan-jessen-thumb.jpg" alt="Headshot of Nathan Jessen" width="150" height="150"></a>
+        <h1>Nathan Jessen</h1>
+        {% if page.title == "Nathan Jessen" %}
+        <p>Interactive Web Developer<br>HTML5, CSS3, and Sass enthusiast<br>Open source advocate</p>
+        {% endif %}
       </div>
+    </header>
+
+    <div class="container">
+      {{ content }}
     </div>
 
     <footer class="container site-footer" role="contentinfo">
       <div class="wrap">
+        <ul class="nav nav--block nav--banner">
+          <li><a class="icon-github" href="{{site.github}}"><span class="sr-only">GitHub</span></a></li>
+          <li><a class="icon-linkedin" href="{{ site.linkedin }}"><span class="sr-only">Linkedin</span></a></li>
+          <li><a class="icon-gplus" href="{{ site.googleplus }}"><span class="sr-only">Google Plus</span></a></li>
+          <li><a class="icon-mail-alt" href="mailto:{{ site.email }}"><span class="sr-only">Email</span></a></li>
+        </ul>
         <span>&copy; {{ site.time | date: '%Y' }} {{ site.author }}</span>
       </div>
     </footer>
