--- a/_includes/nav-social.html
+++ b/_includes/nav-social.html
@@ -1,6 +1,6 @@
 <ul>
 	<li><a class="" href="{{ site.github }}" target="_blank">GitHub</a></li>
 	<li><a class="" href="{{ site.linkedin }}" target="_blank">Linkedin</a></li>
-	<li><a class="" href="{{ site.googleplus }}" target="_blank">Google Plus</a></li>
+	<li><a class="" href="{{ site.gplus }}" target="_blank">Google Plus</a></li>
 	<li><a class="" href="mailto:{{ site.email }}">Email</a></li>
 </ul>
