Update and use nav-social

--- a/_includes/nav-social.html
+++ b/_includes/nav-social.html
@@ -1,6 +1,6 @@
-<ul>
-	<li><a class="" href="{{ site.github }}" target="_blank">GitHub</a></li>
-	<li><a class="" href="{{ site.linkedin }}" target="_blank">Linkedin</a></li>
-	<li><a class="" href="{{ site.gplus }}" target="_blank">Google Plus</a></li>
-	<li><a class="" href="mailto:{{ site.email }}">Email</a></li>
+<ul class="nav nav--block nav--banner">
+  <!-- <li><a class="icon-github" href="{{ site.githubs }}"><span class="sr-only">GitHub</span></a></li> -->
+  <li><a class="icon-linkedin" href="{{ site.linkedin }}"><span class="sr-only">Linkedin</span></a></li>
+  <li><a class="icon-gplus" href="{{ site.gplus }}"><span class="sr-only">Google Plus</span></a></li>
+  <li><a class="icon-mail-alt" href="mailto:{{ site.email }}"><span class="sr-only">Email</span></a></li>
 </ul>
