--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -24,12 +24,7 @@
 
     <footer class="container site-footer" role="contentinfo">
       <div class="wrap">
-        <ul class="nav nav--block nav--banner">
-          <!-- <li><a class="icon-github" href="{{ site.githubs }}"><span class="sr-only">GitHub</span></a></li> -->
-          <li><a class="icon-linkedin" href="{{ site.linkedin }}"><span class="sr-only">Linkedin</span></a></li>
-          <li><a class="icon-gplus" href="{{ site.gplus }}"><span class="sr-only">Google Plus</span></a></li>
-          <li><a class="icon-mail-alt" href="mailto:{{ site.email }}"><span class="sr-only">Email</span></a></li>
-        </ul>
+        {% include nav-social.html %}
         <span>&copy; {{ site.time | date: '%Y' }} {{ site.author }}</span>
       </div>
     </footer>
