--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,13 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container site-navigation">
+      <div class="wrap">
+        {% include nav-main.html %}
+      </div>
+    </div>
+
+    <div class="container page-content">
       {{ content }}
     </div>
 
