Adjust vars and rearrange base styles

--- a/assets/scss/helpers/_vars.scss
+++ b/assets/scss/helpers/_vars.scss
@@ -69,7 +69,7 @@ $use-greybox:       false;
 /**
  * Place any of your own variables that sit on top of inuit.css here.
  */
-$white: #fff;
+$white: #fafafa;
 $white-off: #eee;
 $gray-light: #ccc;
 $gray: #555;
