--- a/assets/scss/theme/_buttons.scss
+++ b/assets/scss/theme/_buttons.scss
@@ -1,5 +1,5 @@
 .btn--primary {
-	@include vendor(transition, all 0.3s ease);
+	// @include vendor(transition, all 0.3s ease);
 	@extend .btn--small, .btn--positive;
 
 	background: $button-color;
