Update to slides and change slides theme

--- a/_includes/head-slides.html
+++ b/_includes/head-slides.html
@@ -9,7 +9,8 @@
 
 <!-- Core CSS -->
 <link href="{{ site.base_url }}assets/vendors/reveal/css/reveal.min.css" rel="stylesheet">
-<link href="{{ site.base_url }}assets/vendors/reveal/css/theme/default.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/vendors/reveal/css/theme/beige.css" rel="stylesheet"><!-- default, beige, sky, night, serif, simple, solarized -->
+<link href="{{ site.base_url }}assets/vendors/highlight/styles/foundation.css" rel="stylesheet">
 <script src="{{ site.base_url }}assets/vendors/reveal/js/reveal.min.js"></script>
 
 <script>
