Remove inuit and begin addition of hikari styles
Removing inuit.css framework in favor of styling done by hikari jekyll
theme

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,15 +12,12 @@
 
 
 /////////////////////////////
-// Inuit
-/////////////////////////////
-@import "inuit.css/inuit";
-
-
-/////////////////////////////
 // Theme
 /////////////////////////////
+@import "theme/normalize";
 @import "theme/fontello";
 @import "theme/base";
 @import "theme/buttons";
 @import "theme/slabs";
+@import "theme/posts";
+@import "theme/article";
