--- a/assets/scss/helpers/_vars.scss
+++ b/assets/scss/helpers/_vars.scss
@@ -1,86 +1,31 @@
 /*------------------------------------*\
     VARS.SCSS
 \*------------------------------------*/
-/**
- * Any variables you find set in inuit.css’ `_vars.scss` that you do not wish to
- * keep, simply redefine here. This means that if inuit.css, for example, sets
- * your `$base-font-size` at 16px and you wish it to be 14px, simply redeclare
- * that variable in this file. inuit.css ignores its own variables in favour of
- * using your own, so you can completely modify how inuit.css works without ever
- * having to alter the framework itself.
- */
 
-
-
-
-
-/*------------------------------------*\
-    $OBJECTS-AND-ABSTRACTIONS
-\*------------------------------------*/
-/**
- * All of inuit.css’ objects and abstractions are initially turned off by
- * default. This means that you start any project with as little as possible,
- * and introducing objects and abstractions is as simple as switching the
- * following variables to `true`.
- */
-$use-grids:         true;
-$use-flexbox:       false;
-$use-columns:       false;
-$use-nav:           true;
-$use-options:       false;
-$use-pagination:    false;
-$use-breadcrumb:    false;
-$use-media:         false;
-$use-marginalia:    false;
-$use-island:        false;
-$use-block-list:    false;
-$use-matrix:        false;
-$use-split:         false;
-$use-this-or-this:  false;
-$use-link-complex:  false;
-$use-flyout:        false;
-$use-arrows:        false;
-$use-sprite:        false;
-$use-icon-text:     false;
-$use-beautons:      true;
-$use-lozenges:      false;
-$use-rules:         false;
-$use-stats:         false;
-$use-greybox:       false;
-
-
-
-
-
-/*------------------------------------*\
-    $OVERRIDES
-\*------------------------------------*/
-/**
- * Place any variables that should override inuit.css’ defaults here.
- */
-
-
-
-
-
-/*------------------------------------*\
-    $CUSTOM
-\*------------------------------------*/
-/**
- * Place any of your own variables that sit on top of inuit.css here.
- */
 $white: #fafafa;
-$white-off: #eee;
-$gray-light: #ccc;
-$gray: #555;
+$white-off: #e0e0e0;
+$gray-light: #f3f0f0;
+$gray: #444;
 $gray-dark: #333;
+$black: #212121;
 
-$green: #063;
-$green-dark: #418636;
+$green-flat: #1bbc9b;
+$blue-flat: #3498db;
+$teal-flat: #389ebc;
+$red-flat: #e96151;
 
-$teal-dark: #313E42;
 $footer-height: 50px;
+$slab-padding: 1em 0;
 
-// Buttons
-$button-color: $green;
-$button-hover-color: $green-dark;
+// Brand Colors
+$brand-colors: (
+	primary: $green-flat,
+	secondary: $blue-flat,
+	tertiary: $teal-flat,
+	quaternary: $red-flat
+);
+
+$header-bg: $blue-flat;
+// $header-bg: map-get($brand-colors, primary);
+$footer-bg: $black;
+$fontello-color: lighten($blue-flat, 60);
