--- a/assets/scss/theme/_buttons.scss
+++ b/assets/scss/theme/_buttons.scss
@@ -1,10 +1,19 @@
-.btn--primary {
-	// @include vendor(transition, all 0.3s ease);
-	@extend .btn--small, .btn--positive;
 
-	background: $button-color;
+.btn {
 
-	&:hover {
-		background: $button-hover-color;
+	&:link,
+	&:visited {
+		color: $white;
+	}
+
+	@each $modifier, $color in $brand-colors {
+		&--#{$modifier} {
+			background: darken($color, 15);
+
+			&:active,
+			&:hover {
+				background: darken($color, 24);
+			}
+		}
 	}
 }
