Update layouts, nav main and homepage
Output posts on homepage. Update layouts to use hikari theme. Remove
links and comments from nav main

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -1,42 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% include head.html %}
-  </head>
-  <body class="{{ page.slug }}">
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/?locale=en/">upgrade your browser</a>. Your experience won't be effected on this site but upgrading your browser is always a great idea!</p>
-    <![endif]-->
+---
+layout: default
+---
 
-    <header id="top" class="container slab" role="banner">
-      <div class="wrap">
-        <a href="{{ site.BASE_PATH }}"><img class="img--round headshot" src="{{ site.base_url }}assets/img/nathan-jessen-thumb.jpg" alt="Headshot of Nathan Jessen" width="150" height="150"></a>
-        <h1>Nathan Jessen</h1>
-      </div>
-    </header>
-
-    <div class="container site-navigation">
-      <div class="wrap">
-        {% include nav-main.html %}
-      </div>
+<section id="single-wrap">
+  <article class="single-content" itemscope itemtype="http://schema.org/BlogPosting">
+    <div class="feat">
+      <h5 class="page-date">
+        <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+          {{ page.date | date_to_long_string }}
+        </time>
+      </h5>
     </div>
-
-    <main class="container page-content slab--white" role="main">
-      <div class="wrap">
-        <h3>{{ page.title }}</h3>
-        {{ content }}
-      </div>
-    </main>
-
-    <footer class="container site-footer" role="contentinfo">
-      <div class="wrap">
-        {% include nav-social.html %}
-        <span>&copy; {{ site.time | date: '%Y' }} {{ site.author }}</span>
-      </div>
-    </footer>
-
-    <!-- JS and analytics only. -->
-    {% include scripts.html %}
-
-  </body>
-</html>
+    <h1 class="page-title" itemprop="name headline">{{ page.title }}</h1>
+    <div itemprop="articleBody">
+      {{ content }}
+    </div>
+    <div id="share" class="feat">
+      <a href="http://twitter.com/share" class="popup">
+        <span class="icon-twitter"></span>
+      </a>
+    </div>
+    {% if page.previous %}
+      <a rel="prev" href="{{ site.BASE_PATH }}{{ page.previous.url }}" id="prev">
+        &larr; <span class="nav-title nav-title-prev">older</span>
+      </a>
+    {% endif %}
+    {% if page.next %}
+      <a rel="next" href="{{ site.BASE_PATH }}{{ page.next.url }}" id="next">
+        <span class="nav-title nav-title-next">newer</span> &rarr;
+      </a>
+    {% endif %}
+  </article>
+</section>
