--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,28 +1,10 @@
 <nav role="navigation">
   <ul class="nav nav--banner nav--block">
-    <li{% if page.slug == "home" %} class="active"{% endif %}>
+    <li{% if page.slug == "homepage" %} class="active"{% endif %}>
       <a href="{{ site.base_url }}">Home</a>
     </li>
-    <!-- <li{% if page.slug == "about" %} class="active"{% endif %}>
-      <a href="{{ site.base_url }}about/">About</a>
-    </li> -->
-    <!-- <li{% if page.slug == "cv" %} class="active"{% endif %}>
-      <a href="{{ site.base_url }}cv/">Work</a>
-    </li> -->
-    <!-- <li{% if page.slug == "blog" %} class="active"{% endif %}>
-      <a href="{{ site.base_url }}blog/">Blog</a>
-    </li> -->
-    <!-- <li{% if page.slug == "vml" %} class="active"{% endif %}>
-      <a href="{{ site.base_url }}vml/">Work</a>
-    </li> -->
-    <!-- <li{% if page.slug == "freelance" %} class="active"{% endif %}>
-      <a href="{{ site.base_url }}freelance/">Work</a>
-    </li> -->
-    <li{% if page.slug == "talks" %} class="active"{% endif %}>
-      <a href="{{ site.base_url }}talks/">Talks</a>
-    </li>
-    <li{% if page.slug == "contact" %} class="active"{% endif %}>
-      <a href="{{ site.base_url }}contact/">Contact</a>
+    <li{% if page.slug == "works" %} class="active"{% endif %}>
+      <a href="{{ site.base_url }}works/">Works</a>
     </li>
   </ul>
 </nav>
