--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,7 +17,9 @@
 @import "theme/normalize";
 @import "theme/fontello";
 @import "theme/base";
-@import "theme/buttons";
-@import "theme/slabs";
+@import "theme/header";
 @import "theme/posts";
 @import "theme/article";
+@import "theme/pagination";
+@import "theme/highlights";
+@import "theme/syntax";
