--- a/assets/scss/theme/_article.scss
+++ b/assets/scss/theme/_article.scss
@@ -1,24 +1,18 @@
 
-#single-wrap {
-  width: 100%;
-  max-width: 780px;
-  margin: 20px auto;
-  font-family: 'Lora', Georgia, serif;
+.single-content {
   z-index: 1;
-}
-
-#single-wrap .single-content {
+  font-family: 'Lora', Georgia, serif;
   padding: 0 40px;
   overflow: hidden;
 }
 
-#single-wrap .feat {
+.single-content .feat {
   text-align: center;
   border-bottom: 1px dotted #E0E1E6;
   margin: 0 20px 50px;
 }
 
-#single-wrap .feat h5.page-date {
+.single-content .feat h5.page-date {
   display: inline-block;
   position: relative;
   top: 11px;
@@ -29,11 +23,11 @@
   padding: 0 20px;
 }
 
-#single-wrap #share {
+.single-content #share {
   margin: 50px 20px;
 }
 
-#single-wrap .feat a.popup {
+.single-content .feat a.popup {
   display: inline-block;
   position: relative;
   top: 15px;
@@ -45,7 +39,7 @@
   -webkit-transition: all .2s ease;
 }
 
-#single-wrap h1.page-title {
+.single-content h1.page-title {
   font-size: 180%;
   line-height: 135%;
   font-family: 'Open Sans', sans-serif;
@@ -54,39 +48,39 @@
   padding: 0 40px;
 }
 
-#single-wrap p {
+.single-content p {
   padding: 0 40px;
 }
 
-#single-wrap ul,
-#single-wrap ol {
+.single-content ul,
+.single-content ol {
   padding: 10px 80px;
 }
 
-#single-wrap ul li,
-#single-wrap ol li {
+.single-content ul li,
+.single-content ol li {
   margin-bottom: 15px;
 }
 
-#single-wrap h1,
-#single-wrap h2,
-#single-wrap h3,
-#single-wrap h4,
-#single-wrap h5,
-#single-wrap h6 {
+.single-content h1,
+.single-content h2,
+.single-content h3,
+.single-content h4,
+.single-content h5,
+.single-content h6 {
   padding: 0 40px;
   margin-top: 40px;
 }
 
-#single-wrap h1 { font-size: 150%; }
-#single-wrap h2 { font-size: 140%; font-style: italic; }
-#single-wrap h3 { font-size: 130%; font-weight: lighter; }
-#single-wrap h4 { font-size: 120%; font-weight: lighter; text-decoration: underline; text-align: center; }
-#single-wrap h5 { font-size: 110%; }
-#single-wrap h6 { font-size: 100%; }
-#single-wrap p { line-height: 160%; }
+.single-content h1 { font-size: 150%; }
+.single-content h2 { font-size: 140%; font-style: italic; }
+.single-content h3 { font-size: 130%; font-weight: lighter; }
+.single-content h4 { font-size: 120%; font-weight: lighter; text-decoration: underline; text-align: center; }
+.single-content h5 { font-size: 110%; }
+.single-content h6 { font-size: 100%; }
+.single-content p { line-height: 160%; }
 
-#single-wrap blockquote {
+.single-content blockquote {
   font-size: inherit;
   font-family: 'Open Sans', sans-serif;
   color: #333;
@@ -96,54 +90,40 @@
   line-height: 165%;
 }
 
-#single-wrap blockquote p {
+.single-content blockquote p {
   padding-left: 0!important;
   padding-right: 0!important;
 }
 
-#single-wrap img {
+.single-content img {
   width: 100%;
   height: 100%;
 }
 
-/* pagination */
 
-#prev,
-#next {
-  position: fixed;
-  text-decoration: none;
-  background: #fff;
-  border: 1px solid #eee;
-  padding: 10px;
-  line-height: 1;
-  border-radius: 25px;
-  bottom: 40px;
-  color: #333;
-}
+/* Viewport width < 480px */
 
-#prev { left: 40px; }
-#next { right: 40px; }
+@media only screen and (max-width : 479px) {
 
-#prev:active,
-#next:active {
-  border-color: #39f;
-}
+  .single-content .single-content { padding: 0 20px; }
+  .single-content h1.page-title { padding: 0 20px; margin: 0 0 30px; }
+  .single-content p { padding: 0 20px; }
 
-.nav-title {
-  display: none;
-}
+  .single-content ul,
+  .single-content ol {
+    padding: 10px 0 10px 35px;
+  }
 
-.nav-title-prev {
-  margin-left: 10px;
-  margin-right: 5px;
-}
+  .single-content h1,
+  .single-content h2,
+  .single-content h3,
+  .single-content h4,
+  .single-content h5,
+  .single-content h6 {
+    padding: 0 20px;
+    margin-top: 30px;
+  }
 
-.nav-title-next {
-  margin-right: 10px;
-  margin-left: 5px;
-}
+  .single-content blockquote { padding: 0 20px; border-left: 4px solid #39f; }
 
-#prev:hover .nav-title,
-#next:hover .nav-title {
-  display: inline;
 }
