--- a/assets/scss/theme/_base.scss
+++ b/assets/scss/theme/_base.scss
@@ -2,6 +2,11 @@
  * Base
  */
 
+html, body {
+	width: 100%;
+	height: 100%;
+}
+
 html {
 	font: 112%/1.5 "Open Sans", sans-serif;
 }
@@ -13,43 +18,44 @@ body {
 	text-rendering: optimizeLegibility;
 }
 
-h1, h2, h3, h4 {
+/* Viewport width < 920px */
+
+@media only screen and (max-width : 919px) {
+  body { font-size: 17px; }
+}
+
+/* Viewport width < 480px */
+@media only screen and (max-width : 479px) {
+  body { font-size: 15px; }
+}
+
+h1, h2, h3, h4, h5, h6 {
 	font-family: 'Dosis', sans-serif;
 	font-weight: 600;
+	color: $gray-dark;
 }
+
+p, small, blockquote { -webkit-font-smoothing: antialiased; }
 
 a {
 	&:link,
 	&:visited {
-		color: $gray;
+		color: $link-color;
 		text-decoration: none;
 	}
 
 	&:active,
 	&:hover {
-		color: $gray-dark;
+		color: $link-color-hover;
 	}
 }
 
 .wrap {
-	margin: 0 auto;
-	max-width: 840px;
+	margin: 20px auto;
+	// margin: 0 auto;
+	max-width: 780px;
 	padding: 0 5%;
-}
-
-.headshot {
-	border-radius: 100%;
-	// padding: 3px;
-}
-
-.site-navigation {
-	background: $gray-light;
-	border-bottom: 1px solid $white-off;
-	padding: 8px 0;
-
-	.nav {
-		margin-bottom: 0;
-	}
+	width: 100%;
 }
 
 .page-content {
@@ -66,15 +72,8 @@ a {
 	}
 }
 
-.pre-footer {
-	text-transform: uppercase;
-}
-
 .site-footer {
-	background: $footer-bg;
-	color: $fontello-color;
-	padding-bottom: 50px;
-	padding-top: 20px;
+	padding: 40px;
 	text-align: center;
 
 	.nav {
@@ -96,4 +95,38 @@ a {
 	padding: 0;
 	position: absolute;
 	width: 1px;
+}
+
+.nav{
+    list-style:none;
+    margin-left:0;
+
+    > li{
+
+        &,
+        > a{
+            display:inline-block;
+           *display:inline;
+            zoom:1;
+        }
+    }
+}
+
+.nav--block{
+    line-height:1;
+    /**
+     * Remove whitespace caused by `inline-block`.
+     */
+    letter-spacing:-0.31em;
+    word-spacing:-0.43em;
+    white-space:nowrap;
+
+    > li{
+        letter-spacing:normal;
+        word-spacing:normal;
+
+        > a{
+            padding:10px;
+        }
+    }
 }
