Update head and site config and fix layouts
Layout now uses something closer to hikari layouts

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section id="single-wrap">
+<section class="wrap">
   <article class="single-content" itemscope itemtype="http://schema.org/BlogPosting">
     <div class="feat">
       <h5 class="page-date">
