--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,12 @@
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta http-equiv="content-language" content="en-gb" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <meta name="description" content="{{ page.description }}">
 <meta name="author" content="{{ site.author }}">
 
 <title>
-  {% if page.title == "Nathan Jessen" %}
+  {% if page.title == "Homepage" %}
     {{ site.description }}
   {% else if %}
     {{ page.title }} | {{ site.title }}
@@ -13,7 +15,7 @@
 
 <!-- Core CSS -->
 <link href="{{ site.base_url }}assets/css/main.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Dosis:400,500,600,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Dosis:400,500,600,700|Open+Sans:400italic,400,300,700|Lora:400,700,400italic' rel='stylesheet' type='text/css'>
 
 <!--[if lt IE 9]>
   <script src="/assets/js/html5shiv.js"></script>
@@ -28,12 +30,15 @@
 <link rel="apple-touch-icon-precomposed" href="{{ site.base_url }}assets/ico/apple-touch-icon-57-precomposed.png">
 <link rel="shortcut icon" href="{{ site.base_url }}assets/ico/favicon.png"> -->
 
+{% comment %} Google Analytics {% endcomment %}
+{% if site.ga_tracking_id and site.ga_domain %}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42437510-1', 'nathanjessen.github.io');
+  ga('create', '{{ site.ga_tracking_id }}', '{{ site.ga_domain }}');
   ga('send', 'pageview');
 </script>
+{% endif %}
